# Project-Kalachakra-

./: .gitignore  Makefile  PROCESS.md  README.md  download_papers.sh  pyproject.toml
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
dashboard/design/: kalachakra.html
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: BirthChartRing.tsx  KalachakraWheel.tsx  PredictionPipeline.tsx
dashboard/src/data/: referenceChart.ts
dashboard/src/lib/: pipeline.ts
dashboard/src/styles/: tokens.css
src/kalachakra/: __init__.py
src/kalachakra/astro/: __init__.py  charts.py  coordinates.py  ephemeris.py  time.py
src/kalachakra/core/: __init__.py  config.py  constants.py  logging.py
src/kalachakra/features/: __init__.py  aspects.py  cyclical.py  dasha.py  dignity.py  planetary.py  vectorizer.py
src/kalachakra/information/: __init__.py  divergence.py  entropy.py  feature_selection.py  fisher.py  mdl.py  mutual_information.py  signal_vs_noise.py
src/kalachakra/math/: __init__.py  angles.py  calculus.py  circular.py  differential_equations.py  fourier.py  information_theory.py  interpolation.py  linalg.py  linear_algebra.py  numerics.py  optimization.py  probability.py  statistics.py
src/kalachakra/reproducibility/: seeds.py
